<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".ProfileActivity">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="55dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="asdasd"
            android:visibility="invisible"/>


        <ImageView
            android:id="@+id/imageViewProfilePhoto"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            app:srcCompat="@drawable/app_logo"
            android:contentDescription="@string/profile_photo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <TextView
            android:id="@+id/textViewFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Lucas Duete"
            android:contentDescription="@string/name_full" />

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="lucasduete"
            android:contentDescription="@string/name_user" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewNumberRepositories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="31" />

            <TextView
                android:id="@+id/textViewNumberStras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="110" />

            <TextView
                android:id="@+id/textViewNumberFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="12" />

            <TextView
                android:id="@+id/textViewNumberFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="17" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewRepositories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Repositórios" />

            <TextView
                android:id="@+id/textViewStras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Estrelas" />

            <TextView
                android:id="@+id/textViewFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Seguidores" />

            <TextView
                android:id="@+id/textViewFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Seguindo" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:text="@string/biografia"
            android:textStyle="bold"
            android:contentDescription="@string/biografia_indication" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="Eu sou um dev fullstack bem lokasso."
            android:textStyle="italic"
            android:contentDescription="@string/biografia_content_description" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" >
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
